Fixed alignment of panel section header.

--- a/modules/gui/frontend/src/widget/panelSections.module.css
+++ b/modules/gui/frontend/src/widget/panelSections.module.css
@@ -10,7 +10,12 @@
     left: 0;
 }
 
-.header span {
+.header {
+    display: flex;
+    align-items: center;
+}
+
+.title {
     margin-left: .3rem;
 }
 
